--- a/paper/main.tex
+++ b/paper/main.tex
@@ -731,7 +731,7 @@ of the Hessian.
   \end{remark}
 \end{theorem}
 
-\begin{figure}[!htb]
+\begin{figure}[H]
 \centering
 \begin{tikzpicture}
 \begin{loglogaxis}[
